# pypi_utils

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml
.github/workflows/: publish-python-package-to-pypi.yml  pylint.yml
pypi_template/: scripts.py
pypi_utils/: __init__.py
